Updated branch to master

--- a/DS_html/index.html
+++ b/DS_html/index.html
@@ -145,7 +145,7 @@
         const config = {
             username: 'PramodModi', // Your GitHub username
             repository: 'Datastructure', // Your repository name
-            branch: 'main', // The branch name (usually 'main' or 'master')
+            branch: 'master', // The branch name (usually 'main' or 'master')
             path: 'DS_html' // The path to your DS_html folder in the repository
         };
 
