Updated name of side panel as Pattern

--- a/DS_html/index.html
+++ b/DS_html/index.html
@@ -122,6 +122,7 @@
     <div class="container">
         <!-- Left sidebar for folders -->
         <div class="sidebar" id="folders-sidebar">
+            <h3 style="text-align: center; padding: 10px 0; margin: 0 0 10px 0; border-bottom: 1px solid #ddd; color: #34495e;">Pattern</h3>
             <p class="loading">Loading folders...</p>
         </div>
         
