Updated name of side panel as Pattern

--- a/DS_html/index.html
+++ b/DS_html/index.html
@@ -122,7 +122,7 @@
     <div class="container">
         <!-- Left sidebar for folders -->
         <div class="sidebar" id="folders-sidebar">
-            <h3 style="text-align: center; padding: 10px 0; margin: 0 0 10px 0; border-bottom: 1px solid #ddd; color: #34495e;">Pattern</h3>
+            <h2 style="text-align: center; padding: 15px 0; margin: 0 0 15px 0; border-bottom: 2px solid #3498db; color: #2c3e50; background-color: #ecf0f1; font-size: 1.4em; font-weight: bold;">Pattern</h2>
             <p class="loading">Loading folders...</p>
         </div>
         
