Updated name of side panel as Pattern

--- a/DS_html/index.html
+++ b/DS_html/index.html
@@ -225,8 +225,10 @@
                     return;
                 }
                 
-                // Clear loading message
+                // Clear loading message but preserve the Pattern heading
+                const patternHeading = foldersContainer.querySelector('h2');
                 foldersContainer.innerHTML = '';
+                foldersContainer.appendChild(patternHeading);
                 
                 // Build folder sidebar
                 for (const folder of folders) {
