--- a/DS_Company/index.html
+++ b/DS_Company/index.html
@@ -189,7 +189,7 @@
     <div class="container">
         <!-- Left sidebar for folders -->
         <div class="sidebar" id="folders-sidebar">
-            <h2 style="text-align: center; padding: 15px 0; margin: 0 0 15px 0; border-bottom: 2px solid #3498db; color: #3498db; background-color: #ecf0f1; font-size: 1.4em; font-weight: bold;">Patterns</h2>
+            <h2 style="text-align: center; padding: 15px 0; margin: 0 0 15px 0; border-bottom: 2px solid #3498db; color: #3498db; background-color: #ecf0f1; font-size: 1.4em; font-weight: bold;">Companies</h2>
             <p class="loading">Loading folders...</p>
         </div>
         
