--- a/DS_Company/index.html
+++ b/DS_Company/index.html
@@ -354,7 +354,7 @@
             
             toggleButton.addEventListener('click', () => {
                 sidebar.classList.toggle('active');
-                toggleButton.textContent = sidebar.classList.contains('active') ? 'Hide Patterns' : 'Show Patterns';
+                toggleButton.textContent = sidebar.classList.contains('active') ? 'Hide Companies' : 'Show Companies';
             });
         }
     </script>
