corrected link of related problem

--- a/DS_html/LIS/LongestIncreasingSubsequence_ReturnSubSeq.html
+++ b/DS_html/LIS/LongestIncreasingSubsequence_ReturnSubSeq.html
@@ -385,9 +385,9 @@ def buildSubSequence(seq, array, index):
     <div class="approach">
         <h2>Related Problems</h2>
         <ul>
-            <li><a href="Longest_Increasing_Subsequence_v2.html">Longest Increasing Subsequence</a> - Finding the length of the longest increasing subsequence</li>
-            <li><a href="Longest_Continuous_Increasing_Subsequence_v2.html">Longest Continuous Increasing Subsequence</a> - Finding the longest subarray with strictly increasing elements</li>
-            <li><a href="Number_of_Longest_Increasing_Subsequence_v2.html">Number of Longest Increasing Subsequence</a> - Count how many different longest increasing subsequences exist</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/Longest_Increasing_Subsequence.html">Longest Increasing Subsequence</a> - Finding the length of the longest increasing subsequence</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/Longest_Continuous_Increasing_Subsequence.html">Longest Continuous Increasing Subsequence</a> - Finding the longest subarray with strictly increasing elements</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/Number_of_Longest_Increasing_Subsequence.html">Number of Longest Increasing Subsequence</a> - Count how many different longest increasing subsequences exist</li>
             <li><a href="https://leetcode.com/problems/largest-divisible-subset/">Largest Divisible Subset</a> - A variation of LIS where elements form a divisible set</li>
             <li><a href="https://leetcode.com/problems/increasing-triplet-subsequence/">Increasing Triplet Subsequence</a> - A simplified version of LIS with fixed length</li>
         </ul>
