--- a/DS_html/LIS/Number_of_Longest_Increasing_Subsequence.html
+++ b/DS_html/LIS/Number_of_Longest_Increasing_Subsequence.html
@@ -361,9 +361,9 @@ def findIndex(array, n):
     <div class="approach">
         <h2>Related Problems</h2>
         <ul>
-            <li><a href="Longest_Increasing_Subsequence_v2.html">Longest Increasing Subsequence</a> - Finding the length of the longest increasing subsequence</li>
-            <li><a href="Longest_Continuous_Increasing_Subsequence_v2.html">Longest Continuous Increasing Subsequence</a> - Finding the longest subarray with strictly increasing elements</li>
-            <li><a href="LongestIncreasingSubsequence_ReturnSubSeq_v2.html">Longest Increasing Subsequence - Return Subsequence</a> - Return the actual subsequence rather than just the length</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/Longest_Increasing_Subsequence.html">Longest Increasing Subsequence</a> - Finding the length of the longest increasing subsequence</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/Longest_Continuous_Increasing_Subsequence.html">Longest Continuous Increasing Subsequence</a> - Finding the longest subarray with strictly increasing elements</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/LongestIncreasingSubsequence_ReturnSubSeq.html">Longest Increasing Subsequence - Return Subsequence</a> - Return the actual subsequence rather than just the length</li>
             <li><a href="https://leetcode.com/problems/delete-and-earn/">Delete and Earn</a> - A dynamic programming problem with a similar structure</li>
             <li><a href="https://leetcode.com/problems/wiggle-subsequence/">Wiggle Subsequence</a> - Finding the length of the longest wiggle subsequence</li>
         </ul>
