--- a/DS_html/LIS/Longest_Continuous_Increasing_Subsequence.html
+++ b/DS_html/LIS/Longest_Continuous_Increasing_Subsequence.html
@@ -313,9 +313,9 @@ Initialize maxLen = 0, startPos = 0
     <div class="approach">
         <h2>Related Problems</h2>
         <ul>
-            <li><a href="Longest_Increasing_Subsequence_v2.html">Longest Increasing Subsequence</a> - Finding the longest subsequence with strictly increasing elements</li>
-            <li><a href="LongestIncreasingSubsequence_ReturnSubSeq_v2.html">Longest Increasing Subsequence - Return Subsequence</a> - Return the actual subsequence rather than just the length</li>
-            <li><a href="Number_of_Longest_Increasing_Subsequence_v2.html">Number of Longest Increasing Subsequence</a> - Count how many different longest increasing subsequences exist</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/Longest_Increasing_Subsequence.html">Longest Increasing Subsequence</a> - Finding the longest subsequence with strictly increasing elements</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/LongestIncreasingSubsequence_ReturnSubSeq.html">Longest Increasing Subsequence - Return Subsequence</a> - Return the actual subsequence rather than just the length</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/Number_of_Longest_Increasing_Subsequence.html">Number of Longest Increasing Subsequence</a> - Count how many different longest increasing subsequences exist</li>
             <li><a href="https://leetcode.com/problems/minimum-number-of-removals-to-make-mountain-array/">Minimum Number of Removals to Make Mountain Array</a> - A related problem involving increasing and decreasing subsequences</li>
             <li><a href="https://leetcode.com/problems/maximum-subarray/">Maximum Subarray</a> - Another problem involving continuous subarrays</li>
         </ul>
