--- a/DS_html/LIS/Longest_Increasing_Subsequence.html
+++ b/DS_html/LIS/Longest_Increasing_Subsequence.html
@@ -396,9 +396,9 @@ def getLSISeq(nums, info, temp, index):
     <div class="approach">
         <h2>Related Problems</h2>
         <ul>
-            <li><a href="Longest_Continuous_Increasing_Subsequence_v2.html">Longest Continuous Increasing Subsequence</a> - Finding the longest subarray with strictly increasing elements</li>
-            <li><a href="LongestIncreasingSubsequence_ReturnSubSeq_v2.html">Longest Increasing Subsequence - Return Subsequence</a> - Return the actual subsequence rather than just the length</li>
-            <li><a href="Number_of_Longest_Increasing_Subsequence_v2.html">Number of Longest Increasing Subsequence</a> - Count how many different longest increasing subsequences exist</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/Longest_Continuous_Increasing_Subsequence.html">Longest Continuous Increasing Subsequence</a> - Finding the longest subarray with strictly increasing elements</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/LongestIncreasingSubsequence_ReturnSubSeq.html">Longest Increasing Subsequence - Return Subsequence</a> - Return the actual subsequence rather than just the length</li>
+            <li><a href="https://pramodmodi.github.io/Datastructure/DS_html/LIS/Number_of_Longest_Increasing_Subsequence.html">Number of Longest Increasing Subsequence</a> - Count how many different longest increasing subsequences exist</li>
             <li><a href="https://leetcode.com/problems/russian-doll-envelopes/">Russian Doll Envelopes</a> - A 2D version of the LIS problem</li>
             <li><a href="https://leetcode.com/problems/maximum-length-of-pair-chain/">Maximum Length of Pair Chain</a> - Another variation of LIS</li>
         </ul>
